[tool.poetry]
name = "repl_nix_apibrillanteesencia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-JWT-Extended = "^4.5.2"
Flask-RESTful = "^0.3.10"
resources = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
